--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <% if flash.any? %>
+      <% flash.each do |key, value| %>
+        <div class="alert <%= flash_class_name(key) %>">
+          <%= value %>
+        </div>
+      <% end %>
+    <% end %>
+    <%= yield %>
+  </div>
 </body>
 </html>
