--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
   <div class="container">
+    <% if current_user %>
+      <div class="alert alert-info">
+        Welcome, <%= current_user.to_s %>
+        <%= link_to "Log out", logout_path, method: 'delete' %>
+      </div>
+    <% else %>
+      <%= link_to "Log in", new_session_path %>
+    <% end %>
     <% if flash.any? %>
       <% flash.each do |key, value| %>
         <div class="alert <%= flash_class_name(key) %>">
