Finished friend component and started messages. Layout facelift.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Home#index</h1>
-
-<%= link_to "Sign Up", new_user_path %>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">Welcome to CoderChat</h1>
+    <p class="lead">This place you can find your friends or make friendship and of course chatting a lot, lot, lot..</p>
+    <%= render 'users/form' %>
+  </div>
+</div>
