--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,26 +11,29 @@
     <nav class="navbar navbar-light bg-faded">
       <%= link_to "CoderChat", root_path, class: 'navbar-brand' %>
       <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-          <% if current_user %>
-            <li class="nav-item">
-               <%= link_to "People", people_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item pull-xs-right">
-              Welcome, <%= current_user.to_s %>
-              <%= link_to logout_path, data: { confirm: 'Are you sure?' }, method: 'delete' do %>
-                <i class="fa fa-power-off"></i>
-              <% end %>
-            </li>
-          <% else %>
-            <li class="nav-item pull-xs-right">
-              <%= link_to new_session_path do %>
-                Log in <i class="fa fa-sign-in"></i>
-              <% end %>
-            </li>
-          <% end %>
+        <% if current_user %>
+          <li class="nav-item">
+             <%= link_to "Messages", messages_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+             <%= link_to "People", people_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item pull-xs-right">
+            Welcome, <%= current_user.to_s %>
+            <%= link_to logout_path, data: { confirm: 'Are you sure?' }, method: 'delete' do %>
+              <i class="fa fa-power-off"></i>
+            <% end %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+             <%= link_to "Sign Up", new_user_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item pull-xs-right">
+            <%= link_to new_session_path do %>
+              Log in <i class="fa fa-sign-in"></i>
+            <% end %>
+          </li>
+        <% end %>
       </ul>
     </nav>
     <% if flash.any? %>
