Nearly finished messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         <% if current_user %>
           <li class="nav-item">
-             <%= link_to "Messages", messages_path, class: 'nav-link' %>
+             <%= link_to "New Message", new_message_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
              <%= link_to "People", people_path, class: 'nav-link' %>
