--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Onesongonechance</title>
+  <title>One song one chance</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+    <nav class="navbar navbar-light bg-faded">
+      <%= link_to "Home", root_path, class: 'navbar-brand' %>
+      <ul class="nav navbar-nav">
+        <% if current_user %>
+          <li class="nav-item">
+             <%= link_to root_path, class: 'nav-link' do %>
+              <i class="fa fa-envelope"></i> Inbox
+             <% end %>
+          </li>
+          <li class="nav-item pull-xs-right">
+            Welcome, <%= current_user.to_s %>
+            <%= link_to logout_path, data: { confirm: 'Are you sure?' }, method: 'delete' do %>
+              <i class="fa fa-power-off"></i>
+            <% end %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+             <%= link_to "Sign Up", new_user_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item pull-xs-right">
+            <%= link_to new_session_path do %>
+              Log in <i class="fa fa-sign-in"></i>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    </nav>
+    <% if flash.any? %>
+      <% flash.each do |key, value| %>
+        <div class="alert <%= flash_class_name(key) %>">
+          <%= value %>
+        </div>
+      <% end %>
+    <% end %>
+    <%= yield %>
+  </div>
 </body>
 </html>
