--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
           <li class="nav-item">
              <%= link_to "Sign Up", new_user_path, class: 'nav-link' %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in", class: 'nav-link' %>
+          </li>
           <li class="nav-item pull-xs-right">
             <%= link_to new_session_path do %>
               Log in <i class="fa fa-sign-in"></i>
