--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,10 @@
       <%= link_to "Home", root_path, class: 'navbar-brand' %>
       <ul class="nav navbar-nav">
         <% if current_user %>
-          <li class="nav-item">
-             <%= link_to root_path, class: 'nav-link' do %>
-              <i class="fa fa-envelope"></i> Inbox
-             <% end %>
-          </li>
           <li class="nav-item pull-xs-right">
             Welcome, <%= current_user.to_s %>
-            <%= link_to logout_path, data: { confirm: 'Are you sure?' }, method: 'delete' do %>
-              <i class="fa fa-power-off"></i>
-            <% end %>
+            <%= link_to "Logout", logout_path, data: { confirm: 'Are you sure?' }, method: 'delete'%>
+            
           </li>
         <% else %>
           <li class="nav-item">
