--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,9 @@
         </div>
       <% end %>
     <% end %>
+    <div class="container">
     <%= yield %>
+    </div>
   </div>
 </body>
 </html>
