--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -109,4 +109,29 @@
   }
 }
 
+.profile-photos {
+    padding: 10px 9px 4px 35px;
+    a {
+      background: #fff;
+      width: 60px; 
+      border-radius: 50%; 
+      display: inline-block;
+      padding: 0px;
+    }
+    .profile-photos-overflow {
+      margin:2px; 
+      border-radius: 50%; 
+      overflow: hidden;
+    }
+    .prof-img-list {
+      border-radius: 50%;
+      display: block;
+      height: auto;
+      max-width: 100%;
+    }
+    .prof-img-list-new {
+      filter: grayscale(100%) blur(1px);
+    }
+}
+
 
