--- a/app/views/users/my_profile.html.erb
+++ b/app/views/users/my_profile.html.erb
@@ -26,19 +26,46 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="default open">
             <div class="link"><i class="fa fa-picture-o"></i>Photos<i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
-              <li>
-                  <p>hello bello</p>
+              <li class="profile-photos">
+                <a href="#" class="prof-img-list-frame">
+                  <div class="profile-photos-overflow">
+                    <img src="<%= current_user.image %>" class="prof-img-list">
+                  </div>
+                </a>
+                <a href="<%= url_for(my_profile_choose_pic_path) %>" data-load-remote="<%= url_for(my_profile_choose_pic_path) %>" data-toggle="modal" class="prof-img-list-frame">
+                  <div class="profile-photos-overflow">
+                    <i class="fa fa-plus" style="z-index: 1; color: #fff; padding-left: 10px; padding-top: 4px;"></i>
+                    <img src="<%= current_user.image %>" class="prof-img-list prof-img-list-new">
+                  </div>
+                </a>
+                <% current_user.user_pictures.each do |picture| %>
+                  <a href="<%= url_for(edit_user_picture_path(picture)) %>" data-load-remote="<%= url_for(edit_user_picture_path(picture)) %>" data-toggle="modal" class="prof-img-list-frame">
+                    <div class="profile-photos-overflow">
+                      <i class="fa fa-plus" style="z-index: 1; color: #fff; padding-left: 10px; padding-top: 4px;"></i>
+                      <img src="<%= current_user.image %>" class="prof-img-list prof-img-list-new">
+                    </div>
+                  </a>
+                <% end %>
               </li>
             </ul>
           </li>
           <li>
             <div class="link"><i class="fa fa-music"></i>Favorite bands<i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
-              <li>
-                  <p>hello bello</p>
+              <li class="profile-photos">
+                <a href="#" class="prof-img-list-frame">
+                  <div class="profile-photos-overflow">
+                    <img src="<%= current_user.image %>" class="prof-img-list">
+                  </div>
+                </a>
+                <a href="#" class="prof-img-list-frame">
+                  <div class="profile-photos-overflow">
+                    <img src="<%= current_user.image %>" class="prof-img-list prof-img-list-new">
+                  </div>
+                </a>
               </li>
             </ul>
           </li>
