--- a/app/views/user_pictures/choose.html.erb
+++ b/app/views/user_pictures/choose.html.erb
@@ -4,10 +4,15 @@
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-      <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      <h4 class="modal-title" id="myModalLabel">Cheese a photo</h4>
     </div>
     <div class="modal-body">
-      ... olala
+      
+
+    choose
+
+
+
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
