--- a/app/views/user_pictures/edit.html.erb
+++ b/app/views/user_pictures/edit.html.erb
@@ -1,6 +1,29 @@
-<h1>Editing User Picture</h1>
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <h4 class="modal-title" id="myModalLabel">Cheese a photo</h4>
+    </div>
+    <div class="modal-body">
+      
 
-<%= render 'form' %>
+    <% @albums.each do |album| %>
+      <div class="card card-inverse" style="background:#000 url('<%=album['picture']%>') center center no-repeat;">
+        <div class="card-block">
+          <h3 class="card-title"><%=album['name']%></h3>
+          <a href="<%= url_for user_pictures_choose_path(@user_picture, album['id']) %>" class="btn btn-primary">Button</a>
+        </div>
+      </div>
+    <% end %>
 
-<%= link_to 'Show', @user_picture %> |
-<%= link_to 'Back', user_pictures_path %>
+
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <button type="button" class="btn btn-primary">Save changes</button>
+    </div>
+  </div>
+</div>
