--- a/app/views/user_pictures/edit.html.erb
+++ b/app/views/user_pictures/edit.html.erb
@@ -1,29 +1,19 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <a href="<%= url_for my_profile_path(section:'picture') %>" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
-      </button>
-      <h4 class="modal-title" id="myModalLabel">Cheese a photo</h4>
+      </a>
+      <h4 class="modal-title" id="myModalLabel">Choose an album</h4>
     </div>
     <div class="modal-body">
-      
-
-    <% @albums.each do |album| %>
-      <div class="card card-inverse" style="background:#000 url('<%=album['picture']%>') center center no-repeat;">
-        <div class="card-block">
-          <h3 class="card-title"><%=album['name']%></h3>
-          <a href="<%= url_for user_pictures_choose_path(@user_picture, album['id']) %>" class="btn btn-primary">Button</a>
-        </div>
+      <div class="list-group">
+        <% @albums.each do |album| %>
+          <a href="<%= url_for user_pictures_choosing_path(@user_picture, album['id']) %>" class="list-group-item">
+            <%=album['name']%>
+          </a>
+        <% end %>
       </div>
-    <% end %>
-
-
-
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      <button type="button" class="btn btn-primary">Save changes</button>
     </div>
   </div>
 </div>
