--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,32 +1,34 @@
 <h1>Youtube Search</h1>
 
-  <%= form_tag nil, method: 'get', class: 'form-inline', style: 'margin-bottom: 20px' do %>
-    <div class="form-group">
-      <%= text_field_tag :q, params[:q], class: 'form-control' %>
-      <%= submit_tag "Search", class: 'btn btn-secondary' %>
-    </div>
-  <% end %>
+<%= form_tag nil, method: 'get', class: 'form-inline', style: 'margin-bottom: 20px' do %>
+<div class="form-group">
+  <%= text_field_tag :q, params[:q], class: 'form-control' %>
+  <%= submit_tag "Search", class: 'btn btn-secondary' %>
+</div>
+<% end %>
 
-  <div class="col-sm-8">
-    <div id="youtube_video">
-      <% if params[:video_id] %>
-        <%= render 'video', video_id: params[:video_id] %>
-        <%= link_to 'Go to Conversation', '/conversations/1', class: 'button btn btn-primary' %>
-      <% end %>
-    </div>
-  </div>
 
-  <div class="col-sm-4">
-    <% if @results.present? %>
-      <% @results.each do |result| %>
-        <% if result.video? %>
-          <%= image_tag result.default_thumbnail_url, width: result.default_thumbnail_url, height: result.default_thumbnail_height %></td>
-        <% end %>
-        <span class="label label-primary"><%= result.result_type %></span>
-          <!-- <%= link_to result.title, root_path(q: params[:q], video_id: result.video_id) %> -->
-          <%= link_to result.title, {:controller => "songs", :action => "create", :user_id => current_user.id, video_id: result.video_id, gender: current_user.gender}, method: :post %>
-          <%= result.description %>
-      <% end %>
-    <% else %>
-      <% end %>  
-  </div>
+<% if @results.present? %>
+<% @results.each do |result| %>
+<% if result.video? %>
+
+
+<% if result.result_type == "Video" %> 
+<div class="row result-card">
+  <div class="yt-thumbnail">
+   <%=  image_tag result.default_thumbnail_url %>
+ </div>
+ <div>
+   <%= link_to result.title, {:controller => "songs", :action => "create", :user_id => current_user.id, name: result.title, utubeid: result.video_id, length: 100}, method: :post %>
+   <br>
+   <div class="description">
+     <%= result.description %>
+   </div>
+ </div>
+</div>
+<% end%>
+
+<% end %>
+
+<% end %>  
+<% end %>  
