--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -28,6 +28,19 @@
     text-align: right;
   }
 }
+.profile-min {
+  .profile-img {
+    height: 80px;
+    width: 80px;
+    margin: 0 0.5rem -55px;
+  }
+  .profile-header {
+    padding: 5px 0 0 0;
+  }
+  .card-block {
+    padding: 0.25rem;
+  }
+}
 
 .accordion {
   .link {
@@ -155,3 +168,61 @@ a.list-group-item:hover {
     color: #FFF;
   }
 }
+
+
+// .bs-callout {
+//     padding: 20px;
+//     margin: 20px 0;
+//     border: 1px solid #eee;
+//     border-left-width: 5px;
+//     border-radius: 3px;
+// }
+// .bs-callout h4 {
+//     margin-top: 0;
+//     margin-bottom: 5px;
+// }
+// .bs-callout p:last-child {
+//     margin-bottom: 0;
+// }
+// .bs-callout code {
+//     border-radius: 3px;
+// }
+// .bs-callout+.bs-callout {
+//     margin-top: -5px;
+// }
+// .bs-callout-default {
+//     border-left-color: #777;
+// }
+// .bs-callout-default h4 {
+//     color: #777;
+// }
+// .bs-callout-primary {
+//     border-left-color: #428bca;
+// }
+// .bs-callout-primary h4 {
+//     color: #428bca;
+// }
+// .bs-callout-success {
+//     border-left-color: #5cb85c;
+// }
+// .bs-callout-success h4 {
+//     color: #5cb85c;
+// }
+// .bs-callout-danger {
+//     border-left-color: #d9534f;
+// }
+// .bs-callout-danger h4 {
+//     color: #d9534f;
+// }
+// .bs-callout-warning {
+//     border-left-color: #f0ad4e;
+// }
+// .bs-callout-warning h4 {
+//     color: #f0ad4e;
+// }
+// .bs-callout-info {
+//     border-left-color: #5bc0de;
+// }
+// .bs-callout-info h4 {
+//     color: #5bc0de;
+// }
