fix add song in conversation

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -8,7 +8,7 @@
 
   </div>
 
-  <div id="current_song"> <%=params[:id] %></div>
+  <div id="current_song" style="display: none;"> <%=params[:id] %></div>
     <script type="text/javascript">
     var secondsCountDown = <%= @song.length + 10%>
     display = "";
