--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -3,9 +3,7 @@ table.results {
 }
 
 .result-card{
-	border-top: 1px solid #f1f1f1;
-	
-	background-color: white;
+	border-top: 1px solid #000;
 	padding:10px;
 }
 .yt-thumbnail
