--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -94,69 +94,73 @@
     </div>
     <div class="modal-body">
 
-      <div class="profile-header" style="background:#000 url('<%= @user.cover %>') center center no-repeat; border-radius: 0.24rem;">
-        <img src="<%= @user.image %>" alt="<%= @user.to_s %>" class="profile-img">
-        <div class="profile-location">
-          <small><i class="fa fa-map-marker"></i> <%= @user.location %></small>
-        </div>
-      </div>
-      <div class="card-block">
-        <h4 class="card-title profile-name"><%= @user.to_s %></h4>
-      </div>
-      <ul id="accordion" class="accordion">
-        <li class="<%= "default open" if @section == 'globe' %>">
-          <div class="link"><i class="fa fa-globe"></i>About<i class="fa fa-chevron-down"></i></div>
-          <ul class="submenu">
-            <li>
-              <p><i class="fa fa-star"></i><%= @user.bio %></p>
+
+      <div class="container profile">
+        <div class="card">
+          <div class="profile-header" style="background:#000 url('<%= @user.cover %>') center center no-repeat; border-radius: 0.24rem;">
+            <img src="<%= @user.image %>" alt="<%= @user.to_s %>" class="profile-img">
+            <div class="profile-location">
+              <small><i class="fa fa-map-marker"></i> <%= @user.location %></small>
+            </div>
+          </div>
+          <div class="card-block">
+            <h4 class="card-title profile-name"><%= @user.to_s %></h4>
+          </div>
+          <ul id="accordion" class="accordion">
+            <li class="default open">
+              <div class="link"><i class="fa fa-globe"></i>About<i class="fa fa-chevron-down"></i></div>
+              <ul class="submenu">
+                <li>
+                  <p><i class="fa fa-star"></i><%= @user.bio %></p>
+                </li>
+                <li>
+                  <p><i class="fa fa-map-marker"></i><%= @user.location %></p>
+                </li>
+                <% if @user.languages %>
+                  <li>
+                    <p><i class="fa fa-language"></i><%= @user.languages %></p>
+                  </li>
+                <% end %>
+              </ul>
             </li>
-            <li>
-              <p><i class="fa fa-map-marker"></i><%= @user.location %></p>
+            <li class="default open">
+              <div class="link"><i class="fa fa-picture-o"></i>Photos<i class="fa fa-chevron-down"></i></div>
+              <ul class="submenu">
+                <li class="profile-photos">
+                  <% @user.user_pictures.each do |picture| %>
+                    <% if picture.empty %>
+                      <a class="prof-img-list-frame">
+                        <div class="profile-photos-overflow">
+                          <i class="fa fa-plus" style="z-index: 1; color: #fff; padding-left: 10px; padding-top: 4px;"></i>
+                          <img src="<%= @user.image %>" class="prof-img-list prof-img-list-new">
+                        </div>
+                      </a>
+                    <% else %>
+                      <a class="prof-img-list-frame">
+                        <div class="profile-photos-overflow">
+                          <img src="<%= picture.picture %>" class="prof-img-list">
+                        </div>
+                      </a>
+                    <% end %>
+                  <% end %>
+                </li>
+              </ul>
             </li>
-            <% if @user.languages %>
-              <li>
-                <p><i class="fa fa-language"></i><%= @user.languages %></p>
+            <% if @user.fb_music %>
+              <li class="default open">
+                <div class="link"><i class="fa fa-music"></i>Favorite bands<i class="fa fa-chevron-down"></i></div>
+                <ul class="submenu">
+                  <% @user.fb_music.each do |music| %>
+                    <li>
+                        <a><%= music['name'] %></a>
+                    </li>
+                  <% end %>
+                </ul>
               </li>
             <% end %>
           </ul>
-        </li>
-        <li class="<%= "default open" if @section == 'picture' %>">
-          <div class="link"><i class="fa fa-picture-o"></i>Photos<i class="fa fa-chevron-down"></i></div>
-          <ul class="submenu">
-            <li class="profile-photos">
-              <% @user.user_pictures.each do |picture| %>
-                <% if picture.empty %>
-                  <a class="prof-img-list-frame">
-                    <div class="profile-photos-overflow">
-                      <i class="fa fa-plus" style="z-index: 1; color: #fff; padding-left: 10px; padding-top: 4px;"></i>
-                      <img src="<%= @user.image %>" class="prof-img-list prof-img-list-new">
-                    </div>
-                  </a>
-                <% else %>
-                  <a class="prof-img-list-frame">
-                    <div class="profile-photos-overflow">
-                      <img src="<%= picture.picture %>" class="prof-img-list">
-                    </div>
-                  </a>
-                <% end %>
-              <% end %>
-            </li>
-          </ul>
-        </li>
-        <li class="<%= "default open" if @section == 'music' %>">
-          <div class="link"><i class="fa fa-music"></i>Favorite bands<i class="fa fa-chevron-down"></i></div>
-          <ul class="submenu">
-            <% if @user.fb_music %>
-              <% @user.fb_music.each do |music| %>
-                <li>
-                    <a><%= music['name'] %></a>
-                </li>
-              <% end %>
-            <% end %>
-          </ul>
-        </li>
-      </ul>
-
+        </div>
+      </div>
     </div>
   </div>
 </div>
